--- a/bhp066/apps/bcpp/templates/bcpp_section_administration.html
+++ b/bhp066/apps/bcpp/templates/bcpp_section_administration.html
@@ -4,6 +4,12 @@
 
 {% block admin_sections %}
     <ul><li><A href="/admin/">All sections</A></ul>
+    {%if is_server %}
+	    <H5>Confirmation Code</H5>
+	    <ul>
+	    	<li><A href="{% url 'generate_confirmation_code_url' %}">Generate Confirmation Code</A>
+	    </ul>
+    {%endif%}
     <H5>BHS</H5>
     <ul>
     <li><A href="{% url 'admin:bcpp_household_plot_changelist' %}">Plots</A>
