filter by survey reports
Former-commit-id: dcd75e344985a4620958bbc75976e7f5e260f873

--- a/bhp066/apps/bcpp_analytics/templates/bcpp_analytics/operational_report_specimen.html
+++ b/bhp066/apps/bcpp_analytics/templates/bcpp_analytics/operational_report_specimen.html
@@ -36,6 +36,16 @@
 					{% endfor %}
 				</select>
 			</td>
+            <td>
+            Survey
+            </td>
+            <td>
+                <select name="survey">
+                    {% for survey in surveys %}
+                        <option value={{survey}}>{{survey}}</option> 
+                    {% endfor %}
+                </select>
+            </td>
 			<td>
 			Date from:
 			</td>
