--- a/bhp066/templates/admin/bcpp_subject/pimavl/change_form.html
+++ b/bhp066/templates/admin/bcpp_subject/pimavl/change_form.html
@@ -3,7 +3,7 @@
 
 {% block submit_buttons_bottom %}
     <div class="submit-row">
-        <A href="{% url 'admin:edc_quota_overridemodel_add' %}?next={{ next_url }}" name="override_quota" id="override_quota">Override Quota</A>
+        <A href="{% url 'admin:edc_quota_overridemodel_add' %}?next={{request.path}}" name="override_quota" id="override_quota">Override Quota</A>
     </div>
     {{ block.super }}
 {% endblock %}
