--- a/bhp066/apps/bcpp_analytics/templates/bcpp_analytics/analytics_index.html
+++ b/bhp066/apps/bcpp_analytics/templates/bcpp_analytics/analytics_index.html
@@ -17,7 +17,8 @@
         <a href="{% url 'analytics:operational_member' %}" class="list-group-item">Operational Member Report</a>
         <a href="{% url 'analytics:operational_specimen' %}" class="list-group-item">Operational Specimen Report</a>
         <a href="{% url 'analytics:operational_annual' %}" class="list-group-item">Operational Annual Report</a>
-        <a href="{% url 'analytics:operational_rbd' %}" class="list-group-item">Operational RBD Report</a>
+        <a href="{% url 'analytics:operational_rbd' %}" class="list-group-item">Operational Clinic RBD Report</a>
+        <a href="{% url 'analytics:operational_visits' %}" class="list-group-item">Operational Clinic Visits Report</a>
         <a href="{% url 'analytics:replacement' %}" class="list-group-item">Replacement Report</a>
         <a href="{% url 'analytics:accrual' %}" class="list-group-item">Community Accrual Report</a>
         <a href="{% url 'analytics:indicators' %}" class="list-group-item">Key Indicators Report</a>
