link edc-quota create override view with bcpp
Former-commit-id: f40ce39fef0ae7e4dff5f5cf577cae1ff041d70c

--- a/bhp066/apps/bcpp/templates/bcpp_section_administration.html
+++ b/bhp066/apps/bcpp/templates/bcpp_section_administration.html
@@ -4,6 +4,10 @@
 
 {% block admin_sections %}
     <ul><li><A href="/admin/">All sections</A></ul>
+	    <H5>Override Code</H5>
+	    <ul>
+	    	<li><A href="{% url 'override_code_url_bcpp' %}">Override Code</A></li>
+	    </ul>
     <H5>BHS</H5>
     <ul>
     <li><A href="{% url 'admin:bcpp_household_plot_changelist' %}">Plots</A>
