limit create override code to servers only.
Former-commit-id: efb3a512092f392633df436983beb213a53fb736

--- a/bhp066/apps/bcpp/templates/bcpp_section_administration.html
+++ b/bhp066/apps/bcpp/templates/bcpp_section_administration.html
@@ -4,10 +4,12 @@
 
 {% block admin_sections %}
     <ul><li><A href="/admin/">All sections</A></ul>
-	    <H5>Override Code</H5>
-	    <ul>
-	    	<li><A href="{% url 'override_code_url_bcpp' %}">Override Code</A></li>
-	    </ul>
+    	{% if is_server %}
+		    <H5>Override Code</H5>
+		    <ul>
+		    	<li><A href="{% url 'override_code_url_bcpp' %}">Override Code</A></li>
+		    </ul>
+		 {% endif %}
     <H5>BHS</H5>
     <ul>
     <li><A href="{% url 'admin:bcpp_household_plot_changelist' %}">Plots</A>
