--- a/bhp066/apps/bcpp_dashboard/templates/subject_dashboard.html
+++ b/bhp066/apps/bcpp_dashboard/templates/subject_dashboard.html
@@ -20,7 +20,8 @@
 <tr style="background:lightyellow;">
 <td><B>Name:</B> {{ household_member.first_name|encrypted }} ({{ household_member.initials }})</td> 
 <td><B>Gender:</B> {{ household_member.gender|gender }}</td>
-<td><B>Age:</B> {% if subject_consent %}{{ subject_consent.age_at_consent }}y at consent{% else %}{{ household_member.age_in_years }} at survey{% endif %}</td>
+<td><B>Age:</B> {% if first_consent %}{{ first_consent.age_at_consent }}y at consent{% else %}{{ household_member.age_in_years }} at survey{% endif %}</td>
+<!-- <td><B>Current Consent Age:</B> {% if subject_consent %}{{ subject_consent.age_at_consent }}y at consent{% else %}{{ household_member.age_in_years }} at survey{% endif %}</td> -->
 <td><B>Survey:</B> {% if subject_consent %}Consented during survey '{{subject_consent.survey_of_consent}}'{% endif %}</td>
 {% if subject_consent %}
     {% if not subject_consent.first_name == household_member.first_name %}
@@ -49,7 +50,7 @@
     <td><B>Identifier:</B> {{subject_consent.subject_identifier }}</td>
     <td><B>{{subject_consent.identity_type|capfirst }}:</B> {{subject_consent.identity|encrypted }}</td>      
     <td><B>Born:</B> {{subject_consent.dob|date:"Y-m-d" }}</td> 
-    <td><B>Age:</B> {{subject_consent.dob|age }}</td>
+    <td><B>Age Today:</B> {{subject_consent.dob|age }}</td>
     <td><B>Date:</B> {{subject_consent.consent_datetime|date:"Y-m-d H:i" }}</td>
   </tr>
   </table>
