--- a/bhp066/apps/bcpp_dashboard/templates/subject_dashboard.html
+++ b/bhp066/apps/bcpp_dashboard/templates/subject_dashboard.html
@@ -114,11 +114,11 @@
 {% endblock referral %}
 
 {% block correct_consent %}
-    {% if subject_consent %}
-        {% if correct_consent %}
-            <A href="{% url 'admin:bcpp_subject_correctconsent_change' correct_consent.id %}?subject_consent={{subject_consent.pk}}&next={{ subject_dashboard_url|default:'dashboard_url' }}&dashboard_type={{dashboard_type}}&dashboard_model={{dashboard_model}}&dashboard_id={{dashboard_id}}&show=appointments">correct_consent</A>
-        {% else %}
-            <A href="{% url 'admin:bcpp_subject_correctconsent_add' %}?subject_consent={{subject_consent.pk}}&next={{ subject_dashboard_url|default:'dashboard_url' }}&dashboard_type={{dashboard_type}}&dashboard_model={{dashboard_model}}&dashboard_id={{dashboard_id}}&show=appointments">correct_consent</A>
-        {% endif %}
-    {% endif %}
+	{% for consent, correct_consent in correct_consents_dict.items %}
+	    {% if correct_consent.0 %}
+	         <A href="{% url 'admin:bcpp_subject_correctconsent_change' correct_consent.0.id %}?subject_consent={{consent}}&next={{ subject_dashboard_url }}&dashboard_type={{dashboard_type}}&dashboard_model={{dashboard_model}}&dashboard_id={{dashboard_id}}&show=appointments">correct_consent V{{correct_consent.1}}</A> |
+	    {% else %}
+	         <A href="{% url 'admin:bcpp_subject_correctconsent_add' %}?subject_consent={{consent}}&next={{ subject_dashboard_url }}&dashboard_type={{dashboard_type}}&dashboard_model={{dashboard_model}}&dashboard_id={{dashboard_id}}&show=appointments">correct_consent V{{correct_consent.1}}</A> |
+	    {% endif %}
+	{% endfor %}
 {% endblock correct_consent %}
