update operational reports

--- a/bhp066/apps/bcpp_analytics/templates/bcpp_analytics/operational_report_consents.html
+++ b/bhp066/apps/bcpp_analytics/templates/bcpp_analytics/operational_report_consents.html
@@ -58,7 +58,7 @@
 <div id="container">
     <div id="leftfloater" style="float: left; margin-right:10px">
         <table border="1">
-        <caption><b>Operational Clinic Visits Report</b></caption>
+        <caption><b>Operational Clinic Consents Report</b></caption>
         <tbody>
         {% for key, value in values.items %}
             <tr style="background: LightYellow;">
