consent report template

--- a/bhp066/apps/bcpp_analytics/templates/bcpp_analytics/operational_report_consents.html
+++ b/bhp066/apps/bcpp_analytics/templates/bcpp_analytics/operational_report_consents.html
@@ -4,7 +4,7 @@
 
     <div class="breadcrumbs">
         <a href="/{{ home }}">Home</a>
-        &rsaquo; Operational Clinic Visit Report
+        &rsaquo; Operational Clinic Consents Report
     </div>
     
 {% endblock %}
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-<form action="/section/analytics/report/operational_visits/">
+<form action="/section/analytics/report/operational_consents/">
     <table>
         <tr>
         <td>
